Kubernetes/temp/crop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-rest-oracle-k8s
  namespace: spring-boot-examples
  labels:
    app: spring-rest-oracle-k8s
spec:
  replicas: 1
  template:
    metadata:
      name: spring-rest-oracle-k8s
      labels:
        app: spring-rest-oracle-k8s
    spec:
      containers:
        - name: spring-rest-oracle-k8s
          image: harilearning1989/spring-rest-oracle-k8s:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
      restartPolicy: Always
  selector:
    matchLabels:
      app: spring-rest-oracle-k8s
