Kubernetes/temp/deployment.yaml
#kubectl get deploy -o wide
#kubectl get pod -o wide
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
  namespace: spring-boot-oracle-k8s
  labels:
    app: spring-deployment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-deployment-app
  template:
    metadata:
      name: spring-pod
      labels:
        app: spring-deployment-app
    spec:
      containers:
        - name: spring-container
          image: harilearning1989/spring-boot-oracle-k8s:24
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /var/DataFiles/csv
              name: spring-volume
            - name: www-persistent-storage
              mountPath: /home/vagrant/storage
      volumes:
        - name: spring-volume
          hostPath:
            path: /home/hari/MyWork/DataFiles/csv/
            type: Directory
        #- name: www-persistent-storage
        #    persistentVolumeClaim:
        #      claimName: spring-pvc
      restartPolicy: Always
