Kubernetes/temp/git-clone.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-helloworld
  name: nginx-helloworld
spec:
  containers:
    - image: nginx
      name: nginx-helloworld
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: www-data
  volumes:
    - name: www-data
      emptyDir: {}
