Kubernetes/temp/git-repo-demo-bkp.yaml
# Example of using an InitContainer in place of a GitRepo volume.
# Unilke GitRepo volumes, this approach runs the git command in a container,
# with the associated hardening.
apiVersion: v1
kind: Pod
metadata:
  name: git-repo-demo
  namespace: spring-boot-oracle-k8s
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
spec:
  containers:
    # Replace with your actual workload.
    - name:  busybox
      image: busybox
      args: ['sleep', '100000'] # Do nothing
      volumeMounts:
        - name: git-repo
          mountPath: /repo
  volumes:
    - name: git-repo
      emptyDir: {}
