Kubernetes/temp/git-repo-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: git-repo-demo
  namespace: spring-boot-oracle-k8s
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
spec:
  containers:
    - name: spring-rest-crop
      image: harilearning1989/spring-rest-crop:9
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /repo
          name: git-repo
  restartPolicy: Always
  volumes:
    - name: git-repo
      emptyDir: {}
