Kubernetes/temp/spring-crop-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-rest-crop
  namespace: spring-boot-oracle-k8s
  labels:
    app: spring-rest-crop
spec:
  replicas: 1
  template:
    metadata:
      name: spring-rest-crop
      labels:
        app: spring-rest-crop
    spec:
      containers:
        - name: spring-rest-crop
          image: harilearning1989/spring-rest-crop:9
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: "/usr"
              name: git-repo
      restartPolicy: Always
      volumes:
        - name: git-repo
          emptyDir: { }
  selector:
    matchLabels:
      app: spring-rest-crop
