Kubernetes/temp/crop-service-bkp.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest-k8s
  namespace: spring-boot-rest-k8s
spec:
  ports:
    - name: spring-boot-rest-k8s
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: spring-boot-rest-k8s
  type: ClusterIP
#type: NodePort
