Kubernetes/temp/crop-ingress-bkp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-rest-k8s
  namespace: spring-boot-rest-k8s
spec:
  rules:
    - host: hari-tech.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: spring-boot-rest-k8s
                port:
                  number: 8081
